# pastiche

./: Cargo.toml  README.md  build.rs  rustfmt.toml
examples/: my_test.rs
src/: files.rs  lib.rs  modules.rs  rust.rs  standard_library.rs  syn_helpers.rs
